Fixed CSS semantic structure inline with HTML and made other changes to CSS

--- a/challenge (1)/starter/index.html
+++ b/challenge (1)/starter/index.html
@@ -20,14 +20,14 @@
                         <a href="#online-reputation-management">Online Reputation Management</a>
                     </li>
                     <li>
-                        <a href="#social-media-marketing">Social Media Marketing!</a>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
             </div>
         </div>
     </header>
     <main>
-        <section>
+        
             <div class="hero"></div>
             <div class="content">
                 <div id="search-engine-optimization" class="search-engine-optimization">
@@ -39,8 +39,9 @@
                         your visibility and find the right customers for your business.
                     </p>
                 </div>
+            </div>
         </section>
-        <section id="online-content">
+        <section class="first">
                 <div id="online-reputation-management" class="online-reputation-management">
                     <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image showing a lapton with graphs on dispay" />
                     <h2>Online Reputation Management</h2>
@@ -50,10 +51,8 @@
                         you the control over what potential customers see when they search for your business.
                     </p>
                 </div> 
-            </div>
-            
         </section>
-        <section>
+        <section class="second">
             <div id="social-media-marketing" class="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image showing a table with a laptop on it and other media icons such as mobile phone" />
                 <h2>Social Media Marketing</h2>
@@ -66,36 +65,35 @@
         </section>
     </main>
     <aside>
-        <div class="benefits">
-            <div class="benefit-lead">
-                <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="Lead generation Icon" />
-                <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers directly
-                    to your website.
-                </p>
+            <div class="benefits">
+                <div class="benefit-lead">
+                    <h3>Lead Generation</h3>
+                    <img src="./assets/images/lead-generation.png" alt="Lead generation Icon" />
+                    <p>
+                        Inbound strategies for lead generation require less work for your business, bringing customers directly
+                        to your website.
+                    </p>
+                </div>
+                <div class="benefit-brand">
+                    <h3>Brand Awareness</h3>
+                    <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
+                    <p>
+                        Users find your business through paid and organic searches, increasing the search ranking and visibility
+                        for your business.
+                    </p>
+                </div>
+                <div class="benefit-cost">
+                    <h3>Cost Management</h3>
+                    <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
+                    <p>
+                        As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                        need to advertise your page.
+                    </p>
+                </div>
             </div>
-            <div class="benefit-brand">
-                <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
-                <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and visibility
-                    for your business.
-                </p>
-            </div>
-            <div class="benefit-cost">
-                <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no longer
-                    need to advertise your page.
-                </p>
-            </div>
-        </div>
     </aside>   
 <footer>
         <div class="footer">
-            <h3>Made with ❤️️ by Horiseon</h3>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
