--- a/challenge (1)/starter/index.html
+++ b/challenge (1)/starter/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -27,7 +27,6 @@
         </div>
     </header>
     <main>
-        
             <div class="hero"></div>
             <div class="content">
                 <div id="search-engine-optimization" class="search-engine-optimization">
@@ -92,10 +91,10 @@
                 </div>
             </div>
     </aside>   
-<footer>
+    <footer>
         <div class="footer">
             <p>
-                &copy; 2019 Horiseon Social Solution Services, Inc.
+                &copy; 2022 Horiseon Social Solution Services, Inc.
             </p>
         </div>
 </footer>
