--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
         <section class="second">
             <div id="social-media-marketing" class="social-media-marketing">
-                <img src="./images/social-media-marketing.jpg" class="float-left" alt="Image showing a table with a laptop on it and other media icons such as mobile phone" />
+                <img src="/images/social-media-marketing.jpg" class="float-left" alt="Image showing a table with a laptop on it and other media icons such as mobile phone" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -67,7 +67,7 @@
             <div class="benefits">
                 <div class="benefit-lead">
                     <h3>Lead Generation</h3>
-                    <img src="./images/lead-generation.png" alt="Lead generation Icon" />
+                    <img src="/images/lead-generation.png" alt="Lead generation Icon" />
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly
                         to your website.
