--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="benefits">
                 <div class="benefit-lead">
                     <h3>Lead Generation</h3>
-                    <img src="/images/lead-generation.png" alt="Lead generation Icon" />
+                    <img src="./images/lead-generation.png" alt="Lead generation Icon" />
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly
                         to your website.
