--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             </div>
     </aside>   
     <footer>
+<!--TEST-->
         <div class="footer">
             <p>
                 &copy; 2022 Horiseon Social Solution Services, Inc.
